# bugs-to-spotify

./: README.md  requirements.txt  setup.cfg
src/: main.py  parse.py  spotify.py
