[metadata]
name = bugs-to-spotify
version = 0.0.1
description = Convert Bugs Music playlist to Spotify playlist
author = Taehoon Kwon
author_email = taevel02@gmail.com

[options]
packages = find:
packages_dir =
    = src
install_requires =
    requests
    beautifulsoup4
    python-dotenv
    Flask
    spotipy